# oracle-ai-developer-hub

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  README.md  SETUP_PRE_COMMIT.md  pyproject.toml  requirements-dev.txt
.github/workflows/: agentic_rag_integration.yml  agentic_rag_smoke.yml
apps/FitTracker/: CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/FitTracker/devtools/: app.js  styles.css  test_page.html
apps/FitTracker/docs/: BOOTSTRAP_PROMPT.md  FitTrack-PRD-v1.0.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md
apps/FitTracker/migrations/: 001_initial_schema.sql  002_duality_views.sql
apps/FitTracker/scripts/: seed_data.py
apps/FitTracker/src/fittrack/: main.py
apps/FitTracker/src/fittrack/api/routes/: __init__.py  activities.py  connections.py  devtools.py  drawings.py  fulfillments.py  health.py  prizes.py  profiles.py  sponsors.py  tickets.py  transactions.py  users.py
apps/FitTracker/src/fittrack/api/schemas/: __init__.py  activity.py  common.py  connection.py  drawing.py  fulfillment.py  prize.py  profile.py  sponsor.py  ticket.py  transaction.py  user.py
apps/FitTracker/src/fittrack/core/: config.py  database.py  exceptions.py  pagination.py
apps/FitTracker/src/fittrack/models/: __init__.py  activity.py  base.py  connection.py  drawing.py  enums.py  fulfillment.py  prize.py  profile.py  sponsor.py  ticket.py  transaction.py  user.py
apps/FitTracker/src/fittrack/repositories/: __init__.py  activity.py  base.py  connection.py  drawing.py  fulfillment.py  prize.py  profile.py  sponsor.py  ticket.py  transaction.py  user.py
apps/FitTracker/tests/: conftest.py
apps/FitTracker/tests/factories/: __init__.py  activity.py  base.py  connection.py  drawing.py  fulfillment.py  prize.py  profile.py  sponsor.py  ticket.py  transaction.py  user.py
apps/FitTracker/tests/integration/: test_api_users.py
apps/FitTracker/tests/unit/: test_models.py  test_repositories.py
apps/agent-reasoning/: README.md
apps/agentic_rag/: Dockerfile  README.md  docker-compose.test.yml  gradio_app.py  openwebui_app.py  requirements.txt  run_app.py
apps/agentic_rag/src/: main.py  (+8 more)
apps/finance-ai-agent-demo/: .env.example  README.md  docker-compose.sprawl.yml  docker-compose.yml
apps/oci-generative-ai-jet-ui/: .gitignore  JET.md  README.md  license_policy.yml  repolinter.json  serverStart.sh  sonar-project.properties
apps/oracle-database-java-agent-memory/: .gitignore  README.md
apps/picooraclaw/: Dockerfile  README.ja.md  README.md  README.zh.md  docker-compose.yml  install.sh
deploy/terraform/: oke.tf
notebooks/: README.md  agent_loop_foundations.ipynb  agent_memory.ipynb  agent_with_memory.ipynb  agentic_rag_langchain_oracledb_demo.ipynb  fs_vs_dbs.ipynb  memory_context_engineering_agents.ipynb  memory_context_engineering_free.ipynb  oracle_agentic_rag_hybrid_search.ipynb  oracle_langchain_example.ipynb  oracle_rag_agents_zero_to_hero.ipynb  oracle_rag_with_evals.ipynb
notebooks/dbsearch-with-selectai/: README-unesco-sites-selectai-colab.md  UNESCO_SITES_sample_data.csv  (+1 more)
(+246 files in other folders)
